# cat_ear_code

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/ear/: CMakeLists.txt
components/ear/include/: ear.hpp
components/ear/src/: ear.cpp
components/mpu6050/: CMakeLists.txt
components/mpu6050/src/: MPU6050.c  inv_mpu.c
components/mpu6050with_carman/: CMakeLists.txt
components/mpu6050with_carman/src/: i2c.cpp
components/servo_smooth/: CMakeLists.txt
components/servo_smooth/include/: servo_smooth.h
components/servo_smooth/src/: servo_smooth.c
main/: CMakeLists.txt  gatts_demo.cpp
